echo -e " ${LBBLUE}Changelog (v10.6F)${NC}\n ${YLW}********************${NC}\n"
echo -e "${RED} Additions:\n${NC}"
echo -e " ${LP}- ${ORNG}XSS-Loader ${W}- XSS Payloader generator"
echo -e " ${LP}- ${ORNG}DeadTrapv2 ${W}- An OSINT tool to track down footprints of a phone number"
echo -e " ${LP}- ${ORNG}GHunt ${W}- GHunt is an OSINT tool to extract information from any Google Account using an email."
echo -e " ${LP}- ${ORNG}TruffleSNout ${W}- Interactive AD discovery toolkit for offensive operators, focused on Situational awareness"
echo -e " ${LP}- ${ORNG}BetterSafetyKatz ${W}- Modified fork of SafetyKatz dynamically patching runtime, based on detected signatures\n                     using SharpSploit DInvoke to get it into memory${NC}"
echo -e " ${LP}- ${ORNG}CVE-2018-8120 ${W}- Added for Privilege Escalation of a target session${NC}"
echo -e " ${LP}- ${ORNG}WebMap ${W}- Provides a graphical webpanel to interact with nMap${NC}"
echo -e "\n ------------------------------------------------------ "
echo -e "\n ${RED}Optional Plugins:\n${NC}"
echo -e " ${LP}- ${ORNG}G ${W}- GUI Overlay"
echo -e "     ${YLW}https://github.com/Sifter-Ex/g${NC}"
echo -e " ${LP}- ${ORNG}F ${W}- DanderFuzz Exploitational Framework"
echo -e "     ${YLW}https://github.com/Sifter-Ex/f${NC}"
echo ""
echo -e " ${LP}- ${YLW}Inputting ${RED}info ${YLW}into any menu screen brings up the Module Info Screen"
echo -e "\n ${W}======================================================${NC}"
#echo -e "\n ${LP}[${ORNG}!${LP}] ${W}Running the Tool Install script is not particularly necessary with this update.\n ${YLW}Unless you'd like to check for Tool specific updates\n ${LP}[${ORNG}!${LP}]${W} Additional tools have been included.${NC}"
echo -e "\n ${W}Running the Tool Install script is recommended for this update in order to install new tools${NC}"
sleep 20
##########################______________ VGhlIERlYWQgQnVubnkgQ2x1Yg== ______________##########################