@@ -85,8 +85,8 @@
 			<br>
 			<img align="middle" src="https://img.shields.io/badge/@Codename:-Gemin1-yellowgreen">
 			<br>
-			<img align="middle" src="https://img.shields.io/badge/Version-10.4-red">
-			<img align="center" src="https://img.shields.io/badge/Revision-G-green">
+			<img align="middle" src="https://img.shields.io/badge/Version-10.6-red">
+			<img align="center" src="https://img.shields.io/badge/Revision-M-green">
 
 		</p>
 
@@ -102,13 +102,13 @@
 		<h2 style="color: #e65c00"># Release</h2>
 
 		&emsp;&emsp;	@Codename: Gemin1 <br>
-		&emsp;&emsp;	@Version : 10.4<br>
-		&emsp;&emsp;	@Revision: G<br>
+		&emsp;&emsp;	@Version : 10.6<br>
+		&emsp;&emsp;	@Revision: M<br>
 		<br />
 		<br />
-		<em>[<strong>Gemin1's</strong>] latest release's zip package can be downloaded from <a href="https://github.com/s1l3nt78/sifter/archive/v10.4g.zip"><strong>here</strong></a></em>
+		<em>[<strong>Gemin1's</strong>] latest release's zip package can be downloaded from <a href="https://github.com/s1l3nt78/sifter/archive/master.zip"><strong>here</strong></a></em>
 		<br />
-		<em>[<strong>Gemin1s</strong>] latest .deb package is also available for download from <a href="https://github.com/s1l3nt78/sifter/releases/download/v10.4g/sifter_10.4_G.deb"><strong>here</strong></a></em>
+		<em>[<strong>Gemin1s</strong>] latest .deb package is also available for download from <a href="https://github.com/s1l3nt78/sifter/releases/download/v10.5f/sifter_10.5_F.deb"><strong>here</strong></a></em>
 		<br />
 		<em>Older Releases can be found <a href="https://github.com/s1l3nt78/sifter/archive/"><strong>here</strong></a></em>
 		<br>
@@ -124,10 +124,11 @@
 
 		<details>
 		<summary># Extentions:</summary>
-		<br />	  - <a href="https://github.com/s1l3nt78/gSifter">G</a> - Sifter's <em>g</em> extention gives a GUI overlay <br />
+		<br />	  - <a href="https://github.com/Sifter-Ex/gPlug">G</a> - Sifter's <em>g</em> extention gives a GUI overlay <br />
 		'--> Built on top of <a href="https://github.com/GitSquared/edex-ui">eDEX-UI</a>
 		<br />
-		- <a href="https://github.com/Sifter-Ex/f">F</a> - Sifter's <em>f</em> extention provides the DanderFuzz Exploitational Plugin for Sifter
+		- <a href="https://github.com/Sifter-Ex/fPlug">F</a> - Sifter's <em>f</em> extention provides the DanderFuzz Exploitational Plugin for Sifter<br />
+		- <a href="https://github.com/Sifter-Ex/mPlug">M</a> - Malware Analysis extention for Sifter
 		</details>
 
 		---------------------------------------------------------------------------------------------------------------------------------------
