@@ -20,9 +20,11 @@ echo -e " ${LP}- ${ORNG}WebMap ${W}- Provides a graphical webpanel to interact w
 echo -e "\n ------------------------------------------------------ "
 echo -e "\n ${RED}Optional Plugins:\n${NC}"
 echo -e " ${LP}- ${ORNG}G ${W}- GUI Overlay"
-echo -e "     ${YLW}https://github.com/Sifter-Ex/g${NC}"
+echo -e "     ${YLW}https://github.com/Sifter-Ex/gPlug ${NC}"
 echo -e " ${LP}- ${ORNG}F ${W}- DanderFuzz Exploitational Framework"
-echo -e "     ${YLW}https://github.com/Sifter-Ex/f${NC}"
+echo -e "     ${YLW}https://github.com/Sifter-Ex/fPlug ${NC}"
+echo -e " ${LP}- ${ORNG}M ${W}- Malware Analysis plugin"
+echo -e "	  ${YLW}https://github.com/Sifter-Ex/mPlug ${NC}"
 echo ""
 echo -e " ${LP}- ${YLW}Inputting ${RED}info ${YLW}into any menu screen brings up the Module Info Screen"
 echo -e "\n ${W}======================================================${NC}"
